Revision history for Catmandu-OAI

{{$NEXT}}

0.04  2014-06-15 20:30:07 CEST
  - switched to the new HTTP::OAI with callbacks
  - adding a network test
  
0.03  2014-06-15 10:22:55 CEST
  - new option: dry (as supported my Catmandu::Importer::getJSON)
  - new option: listIdentifiers
  - changed packaging to Dist::Milla
  - adding more pod

0.02    2013-03-11
  - pluggable record handlers
  - support set, metadataPrefix, from, until
  - more tolerant of bad xml

0.01    2012-05-04
  - initial release